--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -21,15 +21,11 @@
                                         required
                                         formControlName="username">
                                     <label for="floatingInput">Email address</label>
-                                    <span *ngIf="isValidField('name')"
-                                    class="form-text text-danger">
-                                    {{ getErrorMessage('name') }}
-                                </span>
+                                    <span *ngIf="isValidField('username')"
+                                        class="form-text text-danger">
+                                        {{ getErrorMessage('username') }}
+                                    </span>
                                 </div>
-
-                                <p class="error">
-                                    <small class="text-danger">Email is required</small>
-                                </p>
                             </div>
                             <div class="form-group">
                                 <div class="form-floating">
@@ -40,10 +36,10 @@
                                         required
                                         formControlName="password">
                                     <label for="floatingPassword">Password</label>
-                                    <span *ngIf="isValidField('name')"
-                                    class="form-text text-danger">
-                                    {{ getErrorMessage('name') }}
-                                </span>
+                                    <span *ngIf="isValidField('password')"
+                                        class="form-text text-danger">
+                                        {{ getErrorMessage('password') }}
+                                    </span>
                                 </div>
 
                             </div>
