--- a/src/app/task/components/sidebar/sidebar.component.html
+++ b/src/app/task/components/sidebar/sidebar.component.html
@@ -23,7 +23,7 @@
                     <ul class="dropdown-menu dropdown-menu-dark"
                         aria-labelledby="userMenuLink">
                         <li><a class="dropdown-item"
-                                routerLink="/main">Editar Perfil</a></li>
+                                routerLink="/main/user-edit">Editar Perfil</a></li>
                         <li><a class="dropdown-item"
                                 (click)="logout()"><i class="bi bi-box-arrow-right"></i> Salir</a></li>
                     </ul>
