--- a/src/app/task/pages/user-edit/user-edit.component.html
+++ b/src/app/task/pages/user-edit/user-edit.component.html
@@ -1,1 +1,85 @@
-<p>user-edit works!</p>
+<div class="container-fluid">
+    <div class="row min-vh-100 d-flex justify-content-center align-content-center">
+        <div class="col-12 col-sm-6 col-md-4">
+            <div class="card text-white border-info bg-light">
+                <div class="card-body text-dark">
+                    <div class="card-header bg-primary text-light d-flex justify-content-center">
+                        <h4 class="card-title">Editar Perfil</h4>
+                    </div>
+
+                    <!-- formulario de registro -->
+                    <form [formGroup]="registerForm"
+                        (ngSubmit)="onSubmit()"
+                        autocomplete="off">
+                        <div class="form-floating m-3">
+                            <div class="form-group">
+                                <div class="form-floating mb-3">
+                                    <input type="text"
+                                        class="form-control"
+                                        id="floatingUsername"
+                                        placeholder="Username"
+                                        required
+                                        formControlName="userName">
+                                    <label for="floatingUsername">Username</label>
+                                    <span *ngIf="isValidField('userName')"
+                                        class="form-text text-danger">
+                                        {{ getErrorMessage('userName') }}
+                                    </span>
+                                </div>
+                            </div>
+
+
+
+                            <div class="form-group">
+                                <div class="form-floating mb-3">
+                                    <input type="text"
+                                        class="form-control"
+                                        id="floatingPhone"
+                                        placeholder="Phone"
+                                        required
+                                        formControlName="phone"
+                                        [imask]="{ mask: '0000-0000' }">
+                                    <label for="floatingPhone">Phone</label>
+                                    <span *ngIf="isValidField('phone')"
+                                        class="form-text text-danger">
+                                        {{ getErrorMessage('phone') }}
+                                    </span>
+                                </div>
+                            </div>
+
+                            <div class="form-group mb-4">
+                                <label for="ageRange">Age Range</label>
+                                <ngx-slider [options]="ageRangeOptions"
+                                    [(value)]="minAge"
+                                    [(highValue)]="maxAge"
+                                    (valueChange)="onAgeRangeChange()"
+                                    (highValueChange)="onAgeRangeChange()">
+                                </ngx-slider>
+                                <input type="hidden"
+                                    formControlName="ageRange" />
+                                <span *ngIf="isValidField('ageRange')"
+                                    class="form-text text-danger">
+                                    {{ getErrorMessage('ageRange') }}
+                                </span>
+                            </div>
+
+                          
+
+                        </div>
+
+                        <div class="d-flex justify-content-center">
+                            <button type="submit"
+                                class="btn btn-primary"><i class="bi bi-door-open"></i>Salvar</button>
+                        </div>
+                    </form>
+
+                   
+                </div>
+            </div>
+        </div>
+    </div>
+  
+    
+    
+ 
+</div>
