se realizan correcciones en el registro de tareas , eliminacion, se agrega confirmacion de eliminacion

--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
-    <div class="row min-vh-100 d-flex justify-content-center align-content-center">
+    <div class="row min-vh-100 d-flex justify-content-center mt-5">
         <div class="col-12 col-sm-6 col-md-4">
-            <div class="card text-white border-info bg-light">
+            <div class="card text-white border-secondary bg-light">
                 <div class="card-body text-dark">
-                    <div class="card-header bg-primary text-light d-flex justify-content-center">
+                    <div class="card-header bg-secondary text-light d-flex justify-content-center">
                         <h4 class="card-title">Ingrese sus credenciales</h4>
                     </div>
 
@@ -49,7 +49,7 @@
 
                         <div class="d-flex justify-content-center">
                             <button type="submit"
-                                class="btn btn-primary"><i class="bi bi-door-open"></i>Ingresar</button>
+                                class="btn btn-outline-secondary"><i class="bi bi-door-open"></i>Ingresar</button>
                         </div>
 
                     </form>
