--- a/src/app/task/components/sidebar/sidebar.component.html
+++ b/src/app/task/components/sidebar/sidebar.component.html
@@ -18,7 +18,7 @@
                         aria-expanded="false">
                         <i class="bi bi-person-circle me-2"
                             style="font-size: 2rem;"> </i>
-                        <h5 class="mb-0 d-inline">{{ user?.userName }}</h5>
+                        <h5 class="mb-0 d-inline">{{ userInfo.userName }}</h5>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark"
                         aria-labelledby="userMenuLink">
