--- a/src/app/auth/pages/layout-page/layout-page.component.html
+++ b/src/app/auth/pages/layout-page/layout-page.component.html
@@ -1,2 +1,23 @@
-<p>layout-page works!</p>
-<router-outlet />
+<!-- Encabezado de la aplicación -->
+<header class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">My Tasks</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <!-- Puedes agregar más elementos de navegación aquí si es necesario -->
+        </ul>
+        <div class="d-flex">
+          <a class="btn btn-outline-light me-2" [routerLink]="['/auth/login']">Iniciar Sesión</a>
+          <a class="btn btn-outline-light" [routerLink]="['/auth/register']">Registrarse</a>
+        </div>
+      </div>
+    </div>
+  </header>
+  
+  <!-- Contenido principal -->
+  <div class="">
+    <router-outlet></router-outlet>
+  </div>
