--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
-    <div class="row min-vh-100 d-flex justify-content-center align-content-center">
+    <div class="row min-vh-100 d-flex justify-content-center mt-5">
         <div class="col-12 col-sm-6 col-md-4">
-            <div class="card text-white border-info bg-light">
+            <div class="card text-white border-secondary bg-light">
                 <div class="card-body text-dark">
-                    <div class="card-header bg-primary text-light d-flex justify-content-center">
+                    <div class="card-header bg-secondary text-light d-flex justify-content-center">
                         <h4 class="card-title">Registro de Usuario</h4>
                     </div>
 
@@ -113,7 +113,7 @@
 
                         <div class="d-flex justify-content-center">
                             <button type="submit"
-                                class="btn btn-primary"><i class="bi bi-door-open"></i>Registrar</button>
+                                class="btn btn-outline-secondary"><i class="bi bi-door-open"></i>Registrar</button>
                         </div>
                     </form>
 
@@ -126,33 +126,4 @@
             </div>
         </div>
     </div>
-    <h2>Form Valid: {{registerForm.valid}} </h2>
-    <h2>Form invalid: {{registerForm.invalid}} </h2>
-    <h2>Form Status: {{registerForm.status}}</h2>
-    <h2>Form Pending:{{registerForm.pending}} </h2>
-    <h2>Form errors</h2>
-    <pre>{{ registerForm.errors| json }}</pre>
-    
-
-    
-    <h5>Email</h5>
-    <pre>{{ registerForm.controls['email'].errors| json }}</pre>
-    <h5>Phone</h5>
-    <pre>{{ registerForm.controls['phone'].errors| json }}</pre>
-    <h5>Password</h5>
-    <pre>{{ registerForm.controls['password'].errors| json }}</pre>
-    
-    
-    <!-- <h5>Username</h5>
-    <pre>{{ registerForm.controls['username'].errors| json }}</pre>
-
-    <h5>Phone</h5>
-    <pre>{{ registerForm.controls['phone'].errors| json }}</pre>
-    
-    
-    <h5>Password</h5>
-    <pre>{{ registerForm.controls['password'].errors| json }}</pre>
-    
-    <h5>Confirmar</h5>
-    <pre>{{ registerForm.controls['password2'].errors| json }}</pre> -->
 </div>
