--- a/src/app/task/components/uploader-image/uploader-image.component.html
+++ b/src/app/task/components/uploader-image/uploader-image.component.html
@@ -19,7 +19,7 @@
           </div>
         <div *ngIf="imageUrl" class="image-preview mt-3 position-relative">
           <img [src]="imageUrl" class="img-thumbnail" alt="Vista Previa">
-          <button class="btn btn-danger btn-sm position-absolute top-right" (click)="onRemoveImage()">×</button>
+          <!-- <button class="btn btn-danger btn-sm position-absolute top-right" (click)="onRemoveImage()">×</button> -->
         </div>
         <div class="d-flex justify-content-center align-items-center">
             <button *ngIf="selectedFile" class="btn btn-primary mt-3" (click)="onUpload()">
