--- a/src/app/task/pages/list-page/list-page.component.html
+++ b/src/app/task/pages/list-page/list-page.component.html
@@ -5,8 +5,7 @@
             <div class="row">
                 <div class="col-12">
                     <h1>Catálogo de Tareas</h1>
-                    <div class="col-12 d-flex justify-content-around">
-                        <p>Mis Tareas</p>
+                    <div class="col-12 d-flex justify-content-end">
                         <button (click)="createTask()"
                             class="btn btn-primary">
                             <i class="bi bi-plus"></i>
@@ -31,46 +30,71 @@
                                 <td>{{ i+1 }}</td>
                                 <td>{{ task.name }}</td>
                                 <td>
-                                    <select class="form-select" [(ngModel)]="task.status" (change)="updateTaskStatus(task, $event)">
-                                        <option *ngFor="let status of (taskStatus | keyvalue)" [value]="status.value">{{ status.value }}</option>
-                                      </select>
+                                    <select class="form-select"
+                                        [(ngModel)]="task.status"
+                                        (change)="updateTaskStatus(task, $event)">
+                                        <option *ngFor="let status of (taskStatus | keyvalue)"
+                                            [value]="status.value">{{ status.value }}</option>
+                                    </select>
                                 </td>
                                 <td>
-                                <!-- if  not have image get the generic no image forma assets -->
-                                <img [src]="getTaskImageUrl(task)"
-                                alt="{{ task.name }}"
-                                class="img-thumbnail"
-                                style="width: 100px;">
+                                    <!-- if  not have image get the generic no image forma assets -->
+                                    <img [src]="getTaskImageUrl(task)"
+                                        alt="{{ task.name }}"
+                                        class="img-thumbnail"
+                                        style="width: 100px;">
                                 </td>
                                 <td>
-                                    <button (click)="editTask(task)"
-                                        class="btn btn-primary">
-                                        <i class="bi bi-pencil"></i>
-                                        Editar</button>
-                                    <button class="btn btn-danger ms-2">
-                                        <i class="bi bi-trash"></i>
-                                        Eliminar</button>
+
+                                    <div class="dropdown">
+                                        <button class="btn btn-secondary dropdown-toggle"
+                                            type="button"
+                                            id="dropdownMenuButton"
+                                            data-bs-toggle="dropdown"
+                                            aria-expanded="false">
+                                            <i class="bi bi-three-dots-vertical"></i>
+                                        </button>
+                                        <ul class="dropdown-menu"
+                                            aria-labelledby="dropdownMenuButton">
+                                            <li><a class="dropdown-item"
+                                                    href="javascript:void(0)"
+                                                    (click)="editTask(task)">Editar</a></li>
+                                            <li><a class="dropdown-item"
+                                                    href="javascript:void(0)"
+                                                    (click)="deleteTask(task)">Eliminar</a></li>
+                                        </ul>
+                                    </div>
                                 </td>
                             </tr>
-                           
+
                         </tbody>
                     </table>
                 </div>
 
 
+            </div>
         </div>
-    </div>
-    <!-- Toast Container -->
-<!-- Toast Container -->
-<div aria-live="polite" aria-atomic="true" class="position-relative">
-    <div class="toast-container position-fixed top-0 end-0 p-3" style="z-index: 11">
-      <div *ngIf="showToast" class="toast show align-items-center text-bg-success border-0 fade show" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="d-flex">
-          <div class="toast-body">
-            Tarea actualizada con éxito.
-          </div>
-          <button type="button" class="btn-close btn-close-white me-2 m-auto" (click)="hideToast()" aria-label="Close"></button>
+        <!-- Toast Container -->
+        <!-- Toast Container -->
+        <div aria-live="polite"
+            aria-atomic="true"
+            class="position-relative">
+            <div class="toast-container position-fixed top-0 end-0 p-3"
+                style="z-index: 11">
+                <div *ngIf="showToast"
+                    class="toast show align-items-center text-bg-success border-0 fade show"
+                    role="alert"
+                    aria-live="assertive"
+                    aria-atomic="true">
+                    <div class="d-flex">
+                        <div class="toast-body">
+                            {{ msgToast }}
+                        </div>
+                        <button type="button"
+                            class="btn-close btn-close-white me-2 m-auto"
+                            (click)="hideToast()"
+                            aria-label="Close"></button>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
