se agrega opcion de wizard al registro

--- a/src/app/auth/pages/layout-page/layout-page.component.html
+++ b/src/app/auth/pages/layout-page/layout-page.component.html
@@ -12,6 +12,7 @@
         <div class="d-flex">
           <a class="btn btn-outline-light me-2" [routerLink]="['/auth/login']">Iniciar Sesión</a>
           <a class="btn btn-outline-light" [routerLink]="['/auth/register']">Registrarse</a>
+          <a class="btn btn-outline-light" [routerLink]="['/auth/wizard-user']">Registrarse Wizard</a>
         </div>
       </div>
     </div>
